# dnsmasq-plus

./: .gitattributes  .gitignore  Cargo.toml  Makefile  README.md  dnsmasq.conf.example
plus-src/: build.rs  lib.rs  libdnsmasqplus.h
plus-tests/: 0.config  1.config  dnsmasq.rs
src/: dnsmasq.h  forward.c  option.c
