[package]
name = "dnsmasqplus"
version = "0.1.0"
authors = ["jmjoy <918734043@qq.com>"]
edition = "2018"
build = "plus-src/build.rs"

[lib]
path = "plus-src/lib.rs"
crate-type = ["staticlib"]

[[test]]
name = "dnsmasq"
path = "plus-tests/dnsmasq.rs"

[dependencies]
regex = "1.3.1"

[build-dependencies]
cbindgen = "0.14.2"
